feat: upload music file to spotify server
